--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -1472,8 +1472,8 @@ section:after {
 }
 
 .site-navigation.fullscreen .menu.main-menu>li.menu-item {
-    font-size: 64px;
-    line-height: 80px;
+    font-size: 60px;
+    line-height: 70px;
     // text-transform: uppercase;
     letter-spacing: 2px;
     display: block;
@@ -1664,7 +1664,7 @@ section:after {
 
 .site-navigation.fullscreen ul ul {
     position: absolute;
-    top: 18px;
+    top: 62px;
     left: 0;
     visibility: hidden;
     opacity: 0;
@@ -1674,7 +1674,7 @@ section:after {
 .site-navigation.fullscreen ul ul li {
     overflow: hidden;
     font-size: 35px;
-    line-height: 70px;
+    line-height: 60px;
     letter-spacing: 1px;
     padding: 0;
     padding-right: 18px;
@@ -1709,8 +1709,8 @@ section:after {
 
 
 .menu-widget-right {
-    right: 12%;
-    bottom: 24%
+    right: 9%;
+    bottom: 28%
 }
 
 .menu-toggle {
@@ -2235,7 +2235,7 @@ ul.product-tags li a {
     position: fixed;
     left: 8%;
     right: 0;
-    bottom: 24%;
+    bottom: 28%;
     padding: 0;
 }
 
@@ -2268,7 +2268,7 @@ ul.product-tags li a {
     display: block;
     position: absolute;
     opacity: 0;
-    left: -62px;
+    left: -12px;
     visibility: hidden;
     -webkit-transition: all .4s ease;
     -o-transition: all .4s ease;
@@ -2590,7 +2590,12 @@ ul.product-tags li a {
 .text-clor p {
     color: #fff !important;
 }
-
+@media screen and (max-width:1440px){
+    .site-navigation.fullscreen .menu.main-menu>li.menu-item{
+        font-size: 54px;
+        line-height: 64px;
+    }
+}
 @media screen and (max-width:1280px) {
     #work-sction .hd-rvl {
         font-size: 20px;
