--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1657,6 +1657,9 @@ section.horizontal .animation-wrap.to-left {
   .get-in .flex-con .right::after {
     height: 276px;
   }
+  .ser-hero .top-h h1 {
+    font-size: 12em;
+}
 }
 
 @media screen and (max-width:1367px) {
