--- a/assets/resources/styles/less/modules/_header.less
+++ b/assets/resources/styles/less/modules/_header.less
@@ -535,7 +535,7 @@ header {
 // sss
 .nav__showreel {
 	position: absolute;
-	bottom: 6.166667vw;
+	bottom: 25%;
 	left: 0.166667vw;
 	color: #fff;
 	z-index: 999;
@@ -591,7 +591,7 @@ header {
 
 .nav__newsletter-talk {
 	position: absolute;
-	bottom: 6.166667vw;
+	bottom: 25%;
 	right: 0;
 	display: -webkit-box;
 	font-family: 'Ageo';
