--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -11306,10 +11306,10 @@ section.horizontal .animation-wrap.to-left {
 .cas-headline {
   position: absolute;
   top: 50%;
-  left: 1.5%;
+  left: 8.5%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  max-width: 75vw;
+  max-width: 80vw;
   font-size: 54px;
   letter-spacing: 0;
   color: #fff;
@@ -13010,6 +13010,9 @@ ul.product-tags li a {
   .site-navigation.fullscreen .menu.main-menu > li.menu-item {
     font-size: 54px;
     line-height: 64px;
+  }
+  .cas-headline {
+    width: 70vw;
   }
 }
 @media screen and (max-width: 1280px) {
