--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -485,7 +485,9 @@ body.dark .cas-titles .cs-title a,
 body.dark .cas-headline {
     color: #fff;
 }
-
+.actived{
+    min-height: 0;
+}
 .cas-headline .cas-line {
     overflow: hidden;
     padding-right: 0px;
