--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -671,19 +671,17 @@
 }
 
 .last {
-  padding: 0% 12%;
+  padding: 5% 12%;
 
   .gr-b {
-    font-size: 1.6em;
+    font-size: 2.6em;
     font-family: 'NeueHaasDisplay-me';
     letter-spacing: 3px;
-    text-align: left;
+    text-align: center;
     color: #2B2B2B;
     overflow: hidden;
 
     .grd {
-      font-family: 'NeueHaasDisplay-me';
-      font-size: 1.2em;
       color: #fff;
       background-color: #f3ec78;
       background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
@@ -706,9 +704,9 @@
 
     h2 {
       font-size: 1.9em;
-      line-height: 1.4;
+      line-height: 1.7;
       letter-spacing: 2px;
-      padding-right: 31%;
+   color: #fff;
       margin-bottom: 20px;
       font-family: 'NeueHaasDisplay-roman';
     }
@@ -717,18 +715,51 @@
       padding-right: 30%;
       margin-bottom: 3%;
     }
-
+.pointrs-se{
+  display: flex;
+  .left-content{
+    padding: 59px 40px;
+    background: #000;
+    margin-right: 10%;
+    z-index: 2;
+    position: relative;
+    width: 91%;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 10px;
+    top: 10px;
+    right: 10px;
+    bottom: 10px;
+      background: #111215;
+      z-index: -1;
+  }
+    &::after{
+      content: "";
+      position: absolute;
+      left: -10px;
+      top: -10px;
+      right: -10px;
+      bottom: -10px;
+      background: -webkit-gradient(linear, left top, right top, from(#12c2e9), color-stop(#c471ed), to(#f64f59));
+      background: -webkit-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
+      background: -o-linear-gradient(left, #12c2e9, #c471ed, #f64f59);
+      background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+      z-index: -4;
+    }
+  }
+}
     .point {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+      align-items: center;
 
       li {
-        width: 40%;
+        width: 50%;
         font-size: 1em;
-        font-family: 'Ageo';
-        color: #444444;
-        line-height: 2.9;
+        font-family: 'Ageo-Semibold';
+        color: #ffffff;
         padding-left: 20px;
         position: relative;
 
@@ -737,7 +768,7 @@
           background-image: url(/assets/resources/img/Service-elements/bullet-icon.svg);
           width: 15px;
           height: 14px;
-          top: 15px;
+          top: 4px;
           left: 0;
           background-size: cover;
           position: absolute;
@@ -1209,7 +1240,7 @@
 .image-div {
   width: 70%;
   position: relative;
-  margin-top: -40%;
+  margin-top: -15%;
   margin-left: 39%;
   margin-bottom: 7%;
 
