--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -703,7 +703,7 @@
     width: 80%;
 
     h2 {
-      font-size: 1.9em;
+      font-size: 1.6em;
       line-height: 1.7;
       letter-spacing: 2px;
    color: #fff;
@@ -723,7 +723,7 @@
     margin-right: 10%;
     z-index: 2;
     position: relative;
-    width: 91%;
+    // width: 91%;
     &::before {
       content: "";
       position: absolute;
@@ -759,8 +759,8 @@
         width: 50%;
         font-size: 1em;
         font-family: 'Ageo-Semibold';
-        color: #ffffff;
-        padding-left: 20px;
+        color: #444;
+        padding-right: 20px;
         position: relative;
 
         &::before {
@@ -769,7 +769,7 @@
           width: 15px;
           height: 14px;
           top: 4px;
-          left: 0;
+          left: -20px;
           background-size: cover;
           position: absolute;
         }
@@ -1802,11 +1802,11 @@ section.horizontal .animation-wrap.to-left {
 }
 
 .aproch {
-  padding: 5% 0;
+  padding: 15% 0;
   position: relative;
   padding-bottom: 0;
   font-family: 'NeueHaasDisplay-me';
-
+color: #fff;
   .top-bg {
     position: absolute;
     top: -137px;
@@ -1825,14 +1825,14 @@ section.horizontal .animation-wrap.to-left {
   .m-0 {
     margin-top: 0 !important;
   }
-
+  --bs-gutter-x: 3rem;
+  --bs-gutter-y: 6rem;
   .container {
     width: 80%;
 
     h2 {
       padding: 20px 0%;
       font-size: 3em;
-      color: #2b2b2b;
       letter-spacing: 1px;
       text-transform: uppercase;
       font-family: 'NeueHaasDisplay-me';
@@ -1843,34 +1843,41 @@ section.horizontal .animation-wrap.to-left {
       margin-top: 10%;
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-evenly;
-
+      
       .flex-con {
-        display: flex;
-        justify-content: normal;
+        flex: 0 0 auto;
+        width: 33.3333333333%;
+        display: unset;
         align-items: center;
         margin: 0%;
         position: relative;
         margin-bottom: 10%;
-        width: 45%;
-        overflow: hidden;
-
+        padding-right: calc(var(--bs-gutter-x)/ 2);
+        padding-left: calc(var(--bs-gutter-x)/ 2);
         .ap-no {
           position: relative;
-          margin-left: 3%;
-          width: 33%;
           overflow: visible;
-
+&::before{
+  content: '';
+  position: absolute;
+  background: #fff;
+  opacity: 0.5;
+  width: 100%;
+  height: 1px;
+    top: -20px;
+    // transition: 1s all ease-in-out;
+}
           h6 {
-
-
             .numb {
-              font-size: 9em;
+              font-size: 0.9375rem;
               font-family: 'NeueHaasDisplay-me';
-              color: #00000028;
               letter-spacing: 1px;
+              margin-bottom: 15px;
               text-transform: uppercase;
               position: relative;
+              color: #FFFFFF;
+
+opacity: 0.5;
             }
 
 
@@ -1883,6 +1890,8 @@ section.horizontal .animation-wrap.to-left {
 
           h6 {
             overflow: hidden;
+            font-size: 2em;
+            margin-bottom: 15px;
           }
 
           .cons {
@@ -1890,7 +1899,6 @@ section.horizontal .animation-wrap.to-left {
             /* position: absolute; */
             /* left: 10px; */
             text-align: center;
-            color: #2b2b2b;
             text-transform: uppercase;
             margin-bottom: 9px;
 
@@ -1898,14 +1906,33 @@ section.horizontal .animation-wrap.to-left {
         }
 
         p {
-          color: #444;
+          color: #fff;
           letter-spacing: 1px;
         }
-      }
+       
     }
+  
   }
 }
-
+.flex-con:hover .numb{
+opacity: 1 !important;
+}
+  .flex-con:hover .ap-no::before{
+    background: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%) !important;
+    transition: 0.3s all ease-in-out;
+    }
+    .flex-con:hover .ap-prah h6 .cons{
+      background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+      -webkit-text-fill-color: transparent;
+      -text-fill-color: transparent;
+      -webkit-background-clip: text;
+      background-clip: text;
+      background-size: 100% 500%;
+      animation: gradient 2s ease infinite;
+      animation-direction: alternate;
+    }
+    
+  }
 .heigh_100 {
   height: 100vh;
 
@@ -1919,7 +1946,12 @@ section.horizontal .animation-wrap.to-left {
 .right-align {
   text-align: right;
 }
-
+.light .marquees__part{
+  -webkit-text-stroke-color:#fff;
+ img{
+  filter: invert(10);
+ }
+}
 // Mobile Quries
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
   .aproch {
