--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -10443,6 +10443,9 @@ section.horizontal .animation-wrap.to-left {
   width: 74%;
   right: -370px;
 }
+.aproch .m-r {
+  margin-right: 0;
+}
 .aproch .m-0 {
   margin-top: 0 !important;
 }
@@ -10468,12 +10471,13 @@ section.horizontal .animation-wrap.to-left {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
-  width: 33.33333333%;
+  width: 30%;
   display: unset;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   margin: 0%;
+  margin-right: 20px;
   position: relative;
   margin-bottom: 10%;
   padding-right: calc(var(--bs-gutter-x)/2);
@@ -10500,15 +10504,19 @@ section.horizontal .animation-wrap.to-left {
   text-transform: uppercase;
   position: relative;
   color: #FFFFFF;
+  -webkit-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
   opacity: 0.5;
 }
 .aproch .container .approach-lis .flex-con .ap-prah {
-  padding-right: 10%;
+  padding-right: 0%;
 }
 .aproch .container .approach-lis .flex-con .ap-prah h6 {
   overflow: hidden;
   font-size: 2em;
   margin-bottom: 15px;
+  -webkit-transition: 3s all ease-in-out;
+  transition: 3s all ease-in-out;
 }
 .aproch .container .approach-lis .flex-con .ap-prah .cons {
   font-size: 1.1em;
@@ -10517,6 +10525,8 @@ section.horizontal .animation-wrap.to-left {
   text-align: center;
   text-transform: uppercase;
   margin-bottom: 9px;
+  -webkit-transition: 3s all ease-in-out;
+  transition: 3s all ease-in-out;
 }
 .aproch .container .approach-lis .flex-con p {
   color: #fff;
@@ -10541,6 +10551,8 @@ section.horizontal .animation-wrap.to-left {
           animation: gradient 2s ease infinite;
   -webkit-animation-direction: alternate;
           animation-direction: alternate;
+  -webkit-transition: 3s all ease-in-out !important;
+  transition: 3s all ease-in-out !important;
 }
 .heigh_100 {
   height: 100vh;
