--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1821,7 +1821,9 @@ color: #fff;
     width: 74%;
     right: -370px;
   }
-
+.m-r{
+  margin-right: 0;
+}
   .m-0 {
     margin-top: 0 !important;
   }
@@ -1846,10 +1848,11 @@ color: #fff;
       
       .flex-con {
         flex: 0 0 auto;
-        width: 33.3333333333%;
+        width: 30%;
         display: unset;
         align-items: center;
         margin: 0%;
+        margin-right: 20px;
         position: relative;
         margin-bottom: 10%;
         padding-right: calc(var(--bs-gutter-x)/ 2);
@@ -1876,7 +1879,7 @@ color: #fff;
               text-transform: uppercase;
               position: relative;
               color: #FFFFFF;
-
+transition: 0.3s all ease-in-out;
 opacity: 0.5;
             }
 
@@ -1886,12 +1889,13 @@ opacity: 0.5;
         }
 
         .ap-prah {
-          padding-right: 10%;
+          padding-right: 0%;
 
           h6 {
             overflow: hidden;
             font-size: 2em;
             margin-bottom: 15px;
+            transition: 3s all ease-in-out;
           }
 
           .cons {
@@ -1901,6 +1905,7 @@ opacity: 0.5;
             text-align: center;
             text-transform: uppercase;
             margin-bottom: 9px;
+            transition: 3s all ease-in-out;
 
           }
         }
@@ -1930,6 +1935,7 @@ opacity: 1 !important;
       background-size: 100% 500%;
       animation: gradient 2s ease infinite;
       animation-direction: alternate;
+      transition: 3s all ease-in-out !important;
     }
     
   }
