--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1822,7 +1822,7 @@ color: #fff;
     right: -370px;
   }
 .m-r{
-  margin-right: 0;
+  margin-right: 0 !important;
 }
   .m-0 {
     margin-top: 0 !important;
@@ -1836,7 +1836,6 @@ color: #fff;
       padding: 20px 0%;
       font-size: 3em;
       letter-spacing: 1px;
-      text-transform: uppercase;
       font-family: 'NeueHaasDisplay-me';
 
     }
@@ -1876,7 +1875,6 @@ color: #fff;
               font-family: 'NeueHaasDisplay-me';
               letter-spacing: 1px;
               margin-bottom: 15px;
-              text-transform: uppercase;
               position: relative;
               color: #FFFFFF;
 transition: 0.3s all ease-in-out;
