--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1822,7 +1822,7 @@ color: #fff;
     right: -370px;
   }
 .m-r{
-  margin-right: 0 !important;
+  margin-right: 0;
 }
   .m-0 {
     margin-top: 0 !important;
@@ -1847,11 +1847,11 @@ color: #fff;
       
       .flex-con {
         flex: 0 0 auto;
-        width: 30%;
+        width: 33.3333333333%;
         display: unset;
         align-items: center;
         margin: 0%;
-        margin-right: 20px;
+        // margin-right: 20px;
         position: relative;
         margin-bottom: 10%;
         padding-right: calc(var(--bs-gutter-x)/ 2);
