--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -10426,6 +10426,10 @@ section.horizontal .animation-wrap.to-left {
   padding-bottom: 0;
   font-family: 'NeueHaasDisplay-me';
   color: #fff;
+  background-image: url(http://paul-themes.com/html/moonex/assets/img/root/service-bubble.png);
+  background-repeat: no-repeat;
+  background-position: 100% calc(100% + 120px);
+  overflow: hidden;
   --bs-gutter-x: 3rem;
   --bs-gutter-y: 6rem;
 }
