--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1807,6 +1807,10 @@ section.horizontal .animation-wrap.to-left {
   padding-bottom: 0;
   font-family: 'NeueHaasDisplay-me';
 color: #fff;
+background-image: url(http://paul-themes.com/html/moonex/assets/img/root/service-bubble.png);
+    background-repeat: no-repeat;
+    background-position: 100% calc(100% + 120px);
+    overflow: hidden;
   .top-bg {
     position: absolute;
     top: -137px;
