--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -712,8 +712,9 @@
     }
 
     p {
-      padding-right: 30%;
+      padding-right: 0%;
       margin-bottom: 3%;
+      color: #fff;
     }
 .pointrs-se{
   display: flex;
