--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -675,11 +675,12 @@
 
   .gr-b {
     font-size: 2.6em;
-    font-family: 'NeueHaasDisplay-me';
+    font-family: 'Ageo-SemiBold';
     letter-spacing: 3px;
     text-align: center;
     color: #2B2B2B;
     overflow: hidden;
+    line-height: 1.5;
 
     .grd {
       color: #fff;
@@ -708,7 +709,7 @@
       letter-spacing: 2px;
    color: #fff;
       margin-bottom: 20px;
-      font-family: 'NeueHaasDisplay-roman';
+      font-family: 'Ageo-SemiBold';
     }
 
     p {
@@ -721,7 +722,7 @@
   .left-content{
     padding: 59px 40px;
     background: #000;
-    margin-right: 10%;
+    margin-right: 6.9%;
     z-index: 2;
     position: relative;
     // width: 91%;
@@ -759,7 +760,7 @@
       li {
         width: 50%;
         font-size: 1em;
-        font-family: 'Ageo-Semibold';
+        font-family: 'Ageo';
         color: #444;
         padding-right: 20px;
         position: relative;
