--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1483,7 +1483,7 @@ section.horizontal .animation-wrap {
       transform: translate(-75px, -45px);
       // transform: translate(-80px, -26px);
       line-height: 1;
-      background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+      background: linear-gradient(to right, #12c2e9, #c471ed, #f64f5a49), url(https://grainy-gradients.vercel.app/noise.svg);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
   
@@ -1701,6 +1701,9 @@ section.horizontal .animation-wrap.to-left {
   .ser-hero .top-h h1 {
     font-size: 12em;
 }
+.image-div{
+  margin-top: -45%;
+}
 }
 
 @media screen and (max-width:1367px) {
@@ -1716,6 +1719,9 @@ section.horizontal .animation-wrap.to-left {
 }
 
 @media screen and (max-width:1280px) {
+  .image-div{
+    margin-top: -35%;
+  }
   .services-s .image {
     width: 35%;
     /* height: 940px; */
